# production-ai-agents

./: .gitignore  README.md  README.md.bak  embeddings.py  prompt_messages.py  pyproject.toml  vector_stores.py  working_with_llms.py
embeddings/: chains_v1.py  document_loaders.py  embeddings_deep.py  text_splitters.py  vector_stores.py
qabot/: core_concepts.py  main.py  output_parsers_final.py  prompt_templates_all.py  smart_bot_section1.py
rag/: advanced_rag.py  conversation_memory.py  rag_pipeline.py
