[project]
name = "production-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]
